# qut-data-analytics-bigquery-final

./: .gitattributes  .gitignore  convert_multipolygon_to_brackets.py  main.py  pyproject.toml  requirements.txt  sketch_book.ipynb
.devcontainer/: devcontainer.json
data/: monthly_stats.csv  trap_stats.sav
goodnature_analysis/: .gitignore  dbt_project.yml  package-lock.yml  packages.yml
goodnature_analysis/logs/: query_log.sql
goodnature_analysis/macros/: load_extensions.sql
goodnature_analysis/seeds/: australian_suburbs.csv  goodnature_trap_data.csv  nz_addresses.csv  nz_suburb_locality.csv  properties.yml
streamlit/: app.py
streamlit_app/: app.py
streamlit_app/data/: nz_Ashburton District_map.json  nz_Auckland_map.json  nz_Buller District_map.json  nz_Carterton District_map.json  nz_Central Hawke's Bay District_map.json  nz_Central Otago District_map.json  nz_Chatham Islands Territory_map.json  nz_Christchurch City_map.json  nz_Clutha District_map.json  nz_Dunedin City_map.json  nz_Far North District_map.json  nz_Gisborne District_map.json  nz_Gore District_map.json  nz_Grey District_map.json  nz_Hamilton City_map.json  nz_Hastings District_map.json  nz_Hauraki District_map.json  nz_Horowhenua District_map.json  nz_Hurunui District_map.json  nz_Invercargill City_map.json  nz_Kaikoura District_map.json  nz_Kaipara District_map.json  nz_Kapiti Coast District_map.json  nz_Kawerau District_map.json  nz_Lower Hutt City_map.json  nz_Mackenzie District_map.json  nz_Manawatu District_map.json  nz_Marlborough District_map.json  nz_Masterton District_map.json  (+42 more)
(+106 files in other folders)
